--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.9",
     "framer-motion": "^11.15.0",
