--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zepto-admin",
+  "name": "aaira-assist",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
